feat: add fractal app.yaml

--- a/fractal/pom.xml
+++ b/fractal/pom.xml
@@ -12,12 +12,6 @@
     <artifactId>fractal</artifactId>
 
     <dependencies>
-        <!-- Telegram Bot -->
-        <dependency>
-            <groupId>com.github.pengrad</groupId>
-            <artifactId>java-telegram-bot-api</artifactId>
-        </dependency>
-
         <!-- Spring Boot Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,10 +48,10 @@
         </dependency>
 
         <!-- Spring Data JDBC -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jdbc</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-jdbc</artifactId>-->
+<!--        </dependency>-->
 
         <!-- Lombok -->
         <dependency>
