--- a/bot/src/main/resources/application.yaml
+++ b/bot/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ server:
   port: 8080
 
 fractal:
-  url: ${SCRAPPER_URL:http://localhost:8081}
+  url: ${FRACTAL_URL:http://localhost:8081}
 
 springdoc:
   swagger-ui:
