--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,24 @@
-target/
+### Project ##
+!**/src/main/**
+!**/src/test/**
+
+### Maven ###
 !.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+target/
+.flattened-pom.xml
+dependency-reduced-pom.xml
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+!.idea/codeStyles/Project.xml
+!.idea/jsonSchemas.xml
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+### Scala SBT
+.bsp
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+### log files ###
+*.log
+hs_err_pid*
